# lingualeo2anki

./: .gitignore  AUTHORS  ChangeLog  README.en.md  README.md  anki.csv  default.nix  extract_words.sh  file.txt  guard.sh  llserver.py  makesubtitles.py  python-packages.nix  requirements.txt  setup.cfg  setup.py  shell.nix  start_server.sh
patch/: patch.py
server/: __main__.py  config.py  errors.py  handler.py  lingualeo.py  translation.py  utils.py
tests/: __init__.py  test.py  testdata.py
