[metadata]
name = lingualeo2anki
version = 0.0.1
author = Sergey Homa
author-email = melgaardbjorn@gmail.com
summary = Hack lingualeo chrome plugin and save dictionary locally, ready to anki import
description-file = README.md
license = MIT
classifer =
  Development Status :: 3 - Alpha,
  Programming Language :: Python :: 3

[files]
packages = server

[entry_points]
console_scripts =
  lingualeo2anki = server.__main__:main
